--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <body>
 <h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.
-    Thanks Kamil</p>
+<p>I'm hosted with GitHub Pages.</p>
+
+    <p>Thanks Kamil.</p>
 </body>
 </html>
