--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html>
 <body>
 <h1>Hello World</h1>
-<p>
-<I'm hosted with GitHub Pages.>
-<Thanks Kamil.>
+<p><h1>I'm hosted with GitHub Pages.</h1>
+<h2>Thanks Kamil</h2>
 </p>
 </body>
 </html>
