--- a/index.html
+++ b/index.html
@@ -2,8 +2,6 @@
 <html>
 <body>
 <h1>Hello World</h1>
-<p><h1>I'm hosted with GitHub Pages.</h1>
-<h2>Thanks Kamil</h2>
-</p>
+<p>I'm hosted with GitHub Pages. Thanks Kamil.</p>
 </body>
 </html>
