--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
-<html>
+<htmllang="pl">
+  <head>
+    <meta charset="utf-8"> 
+    <title>Świat Ogrodu</title> 
+    <meta name="description" content="fascynujące życie  w ogrodzie.">
+    <!--	To się zobaczy później	<link rel="text/plain" rel="author" href="humans.txt">--> 
+  </head>
 <body>
 <h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages. Thanks Kamil.</p>
+<p>I'm hosted with GitHub Pages.</p>
+<p1>Thanks Kamil.</p1>
 </body>
 </html>
