--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
-<htmllang="pl">
+<html lang="pl">
   <head>
     <meta charset="utf-8"> 
     <title>Świat Ogrodu</title> 
-    <meta name="description" content="fascynujące życie  w ogrodzie.">
-    <!--	To się zobaczy później	<link rel="text/plain" rel="author" href="humans.txt">--> 
+    <meta name="description" content="Fascynujące życie  w ogrodzie."> 
   </head>
 <body>
 <h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-<p1>Thanks Kamil.</p1>
+  <p>I'm hosted with GitHub Pages.<br><br>Thanks Kamil.</p>
 </body>
 </html>
+
