--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="pl">
   <head>
     <meta charset="utf-8"> 
-    <title>Świat Ogrodu</title> 
-    <meta name="description" content="Fascynujące życie  w ogrodzie."> 
+    <title>Test</title> 
+    <meta name="description" content="Strona Testowa."> 
   </head>
 <body>
 <h1>Hello World</h1>
